Implemented simple stocks graph, and made better files structure

--- a/Control/src/main/resources/public/css/general.css
+++ b/Control/src/main/resources/public/css/general.css
@@ -241,8 +241,16 @@ body {
     padding: 0 0 3%;
 }
 
+a:visited:active:link:hover {
+}
 
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s
+}
 
-
+.fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */
+{
+    opacity: 0
+}
 
 
